--- a/requirements.txt
+++ b/requirements.txt
@@ -83,6 +83,7 @@ pyparsing==2.4.7
 pyrsistent==0.18.0
 pyshorteners==1.0.1
 python-dateutil==2.8.2
+pywin32==302
 pywinpty==1.1.4
 PyYAML==6.0
 pyzmq==22.3.0
